deps(package): rename project to create-pr-worktree
- package.json:
  プロジェクト名を "create-pr-sandbox" から "create-pr-worktree" に変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-pr-sandbox",
+  "name": "create-pr-worktree",
   "private": true,
   "version": "0.0.1",
   "description": "create-pr composite actions",
