--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -31,6 +31,7 @@ on:
         required: false
         default: "fix-permissions"
         type: string
+
     outputs:
       status:
         description: "Overall workflow status (success, skipped, error)"
@@ -73,17 +74,6 @@ jobs:
 
     steps:
       # ============================================
-      # Environment Validation
-      # Purpose: Verify runner meets requirements (architecture, required tools: gh, jq)
-      # ============================================
-      - name: Validate runner environment and required tools
-        id: validate-env
-        uses: ./.github/actions/validate-runner-environment
-        with:
-          architecture: amd64 # Expected runner architecture
-          additional-apps: "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0  jq|jq||"
-
-      # ============================================
       # Repository Checkout
       # Purpose: Clone repository with full history for changed-files detection
       # ============================================
@@ -92,6 +82,17 @@ jobs:
         with:
           fetch-depth: 0 # Full history for changed-files
           persist-credentials: true # Required for worktree operations and git push
+
+      # ============================================
+      # Environment Validation
+      # Purpose: Verify runner meets requirements (architecture, required tools: gh, jq)
+      # ============================================
+      - name: Validate runner environment and required tools
+        id: validate-env
+        uses: aglabo/.github/.github/actions/validate-environment@r1.2.1
+        with:
+          architecture: amd64 # Expected runner architecture
+          additional-apps: "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0  jq|jq||"
 
       # ============================================
       # Branch and Pattern Configuration
