--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -94,7 +94,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           architecture: amd64 # Expected runner architecture
-          additional-apps: "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0  jq|jq||"
+          additional-apps: |
+            "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0"
+            "jq|jq||"
 
       # ============================================
       # Branch and Pattern Configuration
