refactor(workflows/reusable): use local validate-environment action
- .github/workflows/reusable-fix-script-permissions.yml:
  validate-environment アクションの参照をリモート (aglabo/.github) からローカル (./.github/actions) に変更
  GITHUB_TOKEN 環境変数の設定を削除
  additional-apps の値を multiline 形式 (パイプ記号区切り、引用符なし) に変更

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -89,14 +89,12 @@ jobs:
       # ============================================
       - name: Validate runner environment and required tools
         id: validate-env
-        uses: aglabo/.github/.github/actions/validate-environment@r1.2.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ./.github/actions/validate-environment
         with:
           architecture: amd64 # Expected runner architecture
           additional-apps: |
-            "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0"
-            "jq|jq||"
+            gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0
+            jq|jq||
 
       # ============================================
       # Branch and Pattern Configuration
