ci(workflows/reusable): use ubuntu-slim runner
- .github/workflows/reusable-fix-script-permissions.yml:
  validate-permissions ジョブの runs-on を ubuntu-latest から ubuntu-slim に変更
  validate-environment アクションの additional-apps で gh と jq の順序を入れ替え

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -61,7 +61,7 @@ defaults:
 
 jobs:
   validate-permissions:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     timeout-minutes: 10
     outputs:
       status: ${{ steps.set-status.outputs.status }}
@@ -93,8 +93,8 @@ jobs:
         with:
           architecture: amd64 # Expected runner architecture
           additional-apps: |
-            "jq|jq||"
             "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0"
+            "jq|jq||"
 
       # ============================================
       # Branch and Pattern Configuration
