docs(workflows/example): add standard file header
- .github/workflows/example-fix-script-permissions.yml:
  ファイル先頭に src パスと説明コメントを追加
  ジョブ名の後に空行を追加してフォーマットを統一

--- a/.github/workflows/example-fix-script-permissions.yml
+++ b/.github/workflows/example-fix-script-permissions.yml
@@ -1,6 +1,7 @@
 name: Example - Fix Script Permissions
-
-# NOTE:
+# src: ./.github/workflows/example-fix-script-permissions.yml
+# @(#) : Example workflow demonstrating usage of reusable-fix-script-permissions.yml
+#
 # This workflow is an example usage of reusable-fix-script-permissions.yml.
 # Adjust triggers, branch selection, and patterns for your project.
 #
@@ -28,6 +29,7 @@ permissions:
 jobs:
   fix-permissions:
     name: Fix Script Permissions
+
     # NOTE: This example checks out the current branch explicitly.
     # The reusable workflow will create a PR that merges INTO this branch.
     # See CONTRACT section in reusable-fix-script-permissions.yml for details.
