--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -93,8 +93,8 @@ jobs:
         with:
           architecture: amd64 # Expected runner architecture
           additional-apps: |
-            "gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0"
-            "jq|jq||"
+            gh|gh (Github CLI)|regex:version ([0-9.]+)|2.0
+            jq|jq||
 
       # ============================================
       # Branch and Pattern Configuration
