refactor(workflows/reusable): enhance status determination logic
- .github/workflows/reusable-fix-script-permissions.yml:
  ステータス判定ロジックにフィルターステップのスキップ検出を追加
  (filter.outputs.status による明示的スキップと filter.outcome による暗黙的スキップを区別)
  各分岐条件にコメントを追加して判定理由を明記
  (Case 1-5 で優先順位と処理内容を文書化)

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -353,16 +353,26 @@ jobs:
         if: always()
         run: |
           # Determine overall workflow status based on step outcomes
+          # Priority: filter.outputs.status (explicit skipped) > outcome checks > default error
+
           if [ "${{ steps.filter.outputs.status }}" = "skipped" ]; then
+            # Case 1: Filter explicitly set status=skipped (no files needing fix)
             echo "status=skipped" >> "$GITHUB_OUTPUT"
             echo "Workflow completed: No scripts to fix"
+          elif [ "${{ steps.filter.outcome }}" = "skipped" ]; then
+            # Case 2: Filter step was skipped (no changed scripts detected)
+            echo "status=skipped" >> "$GITHUB_OUTPUT"
+            echo "Workflow completed: No changed shell scripts detected"
           elif [ "${{ steps.create-pr.outcome }}" = "success" ]; then
+            # Case 3: PR created/updated successfully
             echo "status=success" >> "$GITHUB_OUTPUT"
             echo "Workflow completed: PR created/updated successfully"
           elif [ "${{ steps.filter.outcome }}" = "failure" ] || [ "${{ steps.apply.outcome }}" = "failure" ]; then
+            # Case 4: Explicit failure during processing
             echo "status=error" >> "$GITHUB_OUTPUT"
             echo "::error::Workflow failed during permission fix"
           else
+            # Case 5: Unknown state (should not happen)
             echo "status=error" >> "$GITHUB_OUTPUT"
             echo "::error::Workflow failed for unknown reason"
           fi
