ci(workflows/example): add debug-base-sha parameter
- .github/workflows/example-fix-script-permissions.yml:
  debug-base-sha パラメータを "97507a0" 値で追加

--- a/.github/workflows/example-fix-script-permissions.yml
+++ b/.github/workflows/example-fix-script-permissions.yml
@@ -42,6 +42,7 @@ jobs:
       files-pattern: "**/*.sh"
       files-ignore-pattern: "node_modules/**\n.git/**\nvendor/**"
       pr-branch-prefix: "fix-permissions"
+      debug-base-sha: "97507a0"
 
   display-results:
     name: Display Results
