--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -187,7 +187,7 @@ jobs:
           base_sha: ${{ inputs.debug-base-sha }}
           files: ${{ steps.vars.outputs.files-pattern }}
           files_ignore: ${{ steps.vars.outputs.files-ignore-pattern }}
-          separator: " "
+          separator: "\n"
 
       # ============================================
       # Permission Filtering
@@ -198,12 +198,14 @@ jobs:
         if: steps.changed-scripts.outputs.any_changed == 'true'
         run: |
           changed_files="${{ steps.changed-scripts.outputs.all_changed_files }}"
+          echo "Changed Files: $changed_files "
 
           scripts_without_exec=""
           total_missing_perms=0
 
           while IFS= read -r file; do
             [ -z "$file" ] && continue
+            echo "Changed File: $file "
 
             # Check if file has shebang
             if [ ! -f "$file" ]; then
