fix(workflows/reusable): sanitize branch name for worktree directory
- .github/workflows/reusable-fix-script-permissions.yml:
  ブランチ名のスラッシュをハイフンに置換してワークツリーディレクトリ名を生成
  深いディレクトリ階層を回避するためフラット構造に変更
  worktree親ディレクトリを明示的に作成
  不要なデバッグ出力を削除

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -147,10 +147,12 @@ jobs:
             files_ignore_pattern=$'node_modules/**\n.git/**\nvendor/**'
           fi
 
-          # Set worktree directory (hierarchical structure matching PR branch)
-          # FORMAT: worktree/{prefix}/{current_branch}
-          # DESIGN: Directory structure mirrors branch hierarchy for clarity
-          worktree_dir="worktree/${pr_branch}"
+          # Set worktree directory (flat structure with sanitized branch name)
+          # FORMAT: worktree/{sanitized_pr_branch}
+          # DESIGN: Replace slashes with hyphens to avoid deep directory hierarchies
+          sanitized_pr_branch="${pr_branch//\//-}"
+          worktree_dir="worktree/${sanitized_pr_branch}"
+          mkdir -p "${runner.temp}/worktree"
 
           # ============================================
           # GITHUB_OUTPUT Block
@@ -219,8 +221,6 @@ jobs:
 
             # Get git index mode (100644 = normal, 100755 = executable)
             mode=$(git ls-files --stage "$file" 2>/dev/null | awk '{print $1}')
-
-            echo "Checking $file -- $mode""
 
             if [ -z "$mode" ]; then
               echo "::warning::File not in git index: $file (skipped)"
