fix(workflows/reusable): fix worktree variable and condition
- .github/workflows/reusable-fix-script-permissions.yml:
  runner-temp変数の参照構文を修正 (${runner-temp} → ${RUNNER_TEMP})
  worktree_parent変数の代入演算子を修正 (= → =)
  不要な条件式を削除 (steps.filter.outcome == 'success')

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -151,9 +151,8 @@ jobs:
           # FORMAT: worktree/{sanitized_pr_branch}
           # DESIGN: Replace slashes with hyphens to avoid deep directory hierarchies
           sanitized_pr_branch="${pr_branch//\//-}"
-          worktree_dir="${runner-temp}/worktree/${sanitized_pr_branch}"
-          # for create worktree-dir
-          worktree_parent = $(dirname "$worktree_dir")
+          worktree_dir="${RUNNER_TEMP}/worktree/${sanitized_pr_branch}"
+          worktree_parent=$(dirname "$worktree_dir")
           mkdir -p "$worktree_parent"
 
           # ============================================
@@ -263,7 +262,6 @@ jobs:
       # ============================================
       - name: Setup isolated worktree using pr-worktree-setup action
         id: setup
-        if: steps.filter.outcome == 'success'
         uses: aglabo/create-pr-worktree/.github/actions/pr-worktree-setup@v0.1.0
         with:
           branch-name: ${{ steps.vars.outputs.pr-branch }}
