fix(workflows/reusable): simplify worktree directory structure
- .github/workflows/reusable-fix-script-permissions.yml:
  worktree_dir を相対パス `.worktree/${sanitized_pr_branch}` に変更
  親ディレクトリ作成処理を `${RUNNER_TEMP}/.worktree` の単一 mkdir に簡略化
  worktree_parent 変数と dirname 呼び出しを削除

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -156,6 +156,7 @@ jobs:
           # FORMAT: worktree/{sanitized_pr_branch}
           # DESIGN: Replace slashes with hyphens to avoid deep directory hierarchies
           sanitized_pr_branch="${pr_branch//\//-}"
+          mkdir -p "${RUNNER_TEMP}/.worktree"
           worktree_dir=".worktree/${sanitized_pr_branch}"
 
           # ============================================
