fix(actions/pr-worktree-setup): remove extra quote in worktree path
- .github/actions/pr-worktree-setup/action.yml:
  WORKTREE_DIR 変数の定義から余分なダブルクォートを削除
  誤: ""${RUNNER_TEMP}/..."
  正: "${RUNNER_TEMP}/..."

--- a/.github/actions/pr-worktree-setup/action.yml
+++ b/.github/actions/pr-worktree-setup/action.yml
@@ -67,7 +67,7 @@ runs:
       if: steps.validate-gitsign.outcome == 'success'
       shell: bash
       run: |
-        WORKTREE_DIR=""${RUNNER_TEMP}/${{ inputs.worktree-dir }}"
+        WORKTREE_DIR="${RUNNER_TEMP}/${{ inputs.worktree-dir }}"
 
         # Check if directory already exists
         if [ -e "${WORKTREE_DIR}" ]; then
