feat(workflows/reusable): add automatic commit
- .github/workflows/reusable-fix-script-permissions.yml:
  文字化け修正: 実行権限付与メッセージの文字エンコーディングを修正
  コミット機能追加: 変更を自動的に git add でステージング
  コミットメッセージ生成: heredoc を使用してファイルリスト付きのコミットメッセージを作成
  リモートプッシュ追加: PR ブランチへ変更を自動プッシュ
  フィードバック改善: 各ステップの完了メッセージを追加

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -289,7 +289,7 @@ jobs:
 
             # Apply permission using git index
             if git update-index --chmod=+x "$file"; then
-              echo "  áúz?Added +x to: $file"
+              echo " > Added +x to: $file"
               applied_count=$((applied_count + 1))
             else
               echo "::error::Failed to add +x to: $file"
@@ -297,8 +297,36 @@ jobs:
             fi
           done <<< "$scripts"
 
+
           echo ""
           echo "Successfully applied execute permission to $applied_count file(s)"
+
+          # Commit changes
+          echo ""
+          echo "Committing changes..."
+          git add .
+
+          # Build commit message with file list
+          git commit -m "$(cat <<'COMMIT_MSG'
+          fix: add execute permissions to shell scripts
+
+          Applied execute permission to ${applied_count} shell script(s):
+
+          ${scripts}
+
+          Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>
+          COMMIT_MSG
+          )"
+
+          # Push to remote
+          echo ""
+          echo "Pushing to remote..."
+          PR_BRANCH="${{ steps.vars.outputs.pr-branch }}"
+          git push -u origin "HEAD:${PR_BRANCH}"
+
+          echo ""
+          echo "✓ Changes committed and pushed to branch: ${PR_BRANCH}"
+
           echo "applied-count=$applied_count" >> "$GITHUB_OUTPUT"
 
       # ============================================
