test(workflows/example): set merge-method to never for testing
- .github/workflows/example-fix-script-permissions.yml:
  merge-method パラメータに "never" を設定してマージ動作をテスト

--- a/.github/workflows/example-fix-script-permissions.yml
+++ b/.github/workflows/example-fix-script-permissions.yml
@@ -43,6 +43,7 @@ jobs:
       files-ignore-pattern: "node_modules/**\n.git/**\nvendor/**"
       pr-branch-prefix: "fix-permissions"
       debug-base-sha: "97507a0"
+      merge-method: "never"
 
   display-results:
     name: Display Results
