--- a/.github/workflows/example-fix-script-permissions.yml
+++ b/.github/workflows/example-fix-script-permissions.yml
@@ -66,7 +66,7 @@ jobs:
           if [ "${{ needs.fix-permissions.outputs.scripts }}" != "" ]; then
             echo ""
             echo "Fixed scripts:"
-            echo "${{ needs.fix-permissions.outputs.scripts }}" | while IFS= read -r script; do
+            echo "${{ needs.fix-permissions.outputs.scripts }}" | sed 's/^- //' | while IFS= read -r script; do
               [ -n "$script" ] && echo "  - $script"
             done
           fi
