fix(workflows/example): add error handling to script output loop
- .github/workflows/example-fix-script-permissions.yml:
  echo コマンドに || true のフォールバックを追加して、空の script 値でもパイプラインが失敗しないように修正

--- a/.github/workflows/example-fix-script-permissions.yml
+++ b/.github/workflows/example-fix-script-permissions.yml
@@ -67,7 +67,7 @@ jobs:
             echo ""
             echo "Fixed scripts:"
             echo "${{ needs.fix-permissions.outputs.scripts }}" | while IFS= read -r script; do
-              [ -n "$script" ] && echo "  - $script"
+              [ -n "$script" ] && echo "  - $script" || true
             done
           fi
 
