--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -155,6 +155,7 @@ jobs:
           # Set worktree directory (flat structure with sanitized branch name)
           # FORMAT: worktree/{sanitized_pr_branch}
           # DESIGN: Replace slashes with hyphens to avoid deep directory hierarchies
+          #         pr-worktree-setup action will add run-id suffix to prevent conflicts
           sanitized_pr_branch="${pr_branch//\//-}"
           mkdir -p "${RUNNER_TEMP}/.worktree"
           worktree_dir=".worktree/${sanitized_pr_branch}"
@@ -330,7 +331,15 @@ jobs:
           echo ""
           echo "Pushing to remote..."
           PR_BRANCH="${{ steps.vars.outputs.pr-branch }}"
-          git push -u origin "HEAD:${PR_BRANCH}"
+
+          # Check if remote branch exists
+          if git ls-remote --exit-code --heads origin "${PR_BRANCH}" >/dev/null 2>&1; then
+            echo "Remote branch exists - appending changes with force push"
+            git push --force-with-lease origin "HEAD:${PR_BRANCH}"
+          else
+            echo "Creating new remote branch"
+            git push -u origin "HEAD:${PR_BRANCH}"
+          fi
 
           echo ""
           echo "✓ Changes committed and pushed to branch: ${PR_BRANCH}"
