deps(package): update version and cleanup package scripts
- package.json:
  バージョンを 0.0.1 から 0.1.0 に更新
  lint:text:fix スクリプトを削除
  lint:markdown:fix スクリプトを削除
- pnpm-lock.yaml:
  初期ロックファイルを追加 (lockfileVersion 9.0)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-pr-worktree",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "create-pr composite actions",
   "author": "Furukawa, Atsushi <atsushifx@gmail.com>",
   "license": "MIT",
@@ -9,8 +9,6 @@
     "prepare": "bash ./scripts/prepare.sh",
     "scan:secrets": "gitleaks dir --config ./configs/gitleaks.toml . && secretlint --secretlintrc ./configs/secretlint.config.yaml **/*",
     "lint:text": "pnpm exec textlint --config ./configs/textlintrc.yaml --cache --cache-location .cache/textlintcache ",
-    "lint:text:fix": "pnpm run lint:text --fix ",
-    "lint:markdown": "pnpm exec markdownlint-cli2 --config ./configs/.markdownlint.yaml ",
-    "lint:markdown:fix": "pnpm run lint:markdown --fix "
+    "lint:markdown": "pnpm exec markdownlint-cli2 --config ./configs/.markdownlint.yaml "
   }
 }
