refactor(workflows/reusable): migrate to local actions
- .github/workflows/reusable-fix-script-permissions.yml:
  validate-environment アクションを r1.2.1 から r1.2.2 に更新
  pr-worktree-setup、create-pr-from-worktree、pr-worktree-cleanup を
  外部参照からローカルパス (./.github/actions/*) に変更
  worktree-dir パラメータから ${{ runner.temp }} プレフィックスを削除し、相対パスに簡素化

--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -265,7 +265,7 @@ jobs:
         uses: ./.github/actions/pr-worktree-setup
         with:
           branch-name: ${{ steps.vars.outputs.pr-branch }}
-          worktree-dir: ${{ runner.temp }}/${{ steps.vars.outputs.worktree-dir }}
+          worktree-dir: ${{ steps.vars.outputs.worktree-dir }}
 
       # ============================================
       # Permission Application
