--- a/.github/workflows/reusable-fix-script-permissions.yml
+++ b/.github/workflows/reusable-fix-script-permissions.yml
@@ -94,7 +94,7 @@ jobs:
       # ============================================
       - name: Validate runner environment and required tools
         id: validate-env
-        uses: ./.github/actions/validate-environment
+        uses: aglabo/.github/.github/actions/validate-environment@r1.2.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
